# bazel_grlib

./: .bazelrc  .gitignore  BUILD.bazel  GEMINI.md  Kconfig  MODULE.bazel  README.md  config_files.txt  grlib.BUILD  maintain.sh  maintain_test.sh  test_grlib.BUILD
.bcr/: config.yml  metadata.json  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: build.yml  publish-bcr.yml  publish-repo.yml  publish.yml  tag-and-release.yml
docs/: example.bazelrc  worked_example.md
integration/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-integration  bazel-out  bazel-testlogs  noelv_tb.vhd  noelvsys_repro_tb.vhd
scripts/: BUILD.bazel  gen_build_files.go
tool.nvc/: BUILD.bazel
tool.nvc/integration/: BUILD.bazel
