load("@gazelle//:def.bzl", "gazelle")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "vhdl_standard",
    build_setting_default = "1993",
    visibility = ["//visibility:public"],
)

[
    config_setting(
        name = "std_" + std,
        flag_values = {":vhdl_standard": std},
        visibility = ["//visibility:public"],
    )
    for std in [
        "1987",
        "1993",
        "2002",
        "2008",
        "2019",
    ]
]

# gazelle:prefix grlib
gazelle(name = "gazelle")

exports_files(["Kconfig"])

# Export Kconfig settings as aliases for external modules
alias(
    name = "CONFIG_NOELV_RV64",
    actual = "@grlib_config//:CONFIG_NOELV_RV64",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "NOELV_RV64_SETTING",
    flag_values = {
        ":CONFIG_NOELV_RV64": "True",
    },
    visibility = ["//visibility:public"],
)

alias(
    name = "NOELV_RV64",
    actual = ":NOELV_RV64_SETTING",
    visibility = ["//visibility:public"],
)

alias(
    name = "ACTIVE_DESIGN_PREFIX",
    actual = "@grlib_config//:CONFIG_ACTIVE_DESIGN_PREFIX",
    visibility = ["//visibility:public"],
)

alias(
    name = "grlib",
    actual = "@grlib_srcs//:grlib",
    visibility = ["//visibility:public"],
)

alias(
    name = "gaisler",
    actual = "@grlib_srcs//:gaisler",
    visibility = ["//visibility:public"],
)

alias(
    name = "techmap",
    actual = "@grlib_srcs//:techmap",
    visibility = ["//visibility:public"],
)

# Maintenance targets
sh_binary(
    name = "maintain",
    srcs = ["maintain.sh"],
    args = [
        "--maintain_bin=$(rootpath //third_party/grlib/scripts:maintain)",
        "--gen_build_files=$(rootpath //third_party/grlib/scripts:gen_build_files)",
        "--in2kconfig=$(rootpath //third_party/grlib/scripts:in2kconfig)",
        "--gen_master_kconfig=$(rootpath //third_party/grlib/scripts:gen_master_kconfig)",
        "--gen_example_bazelrc=$(rootpath //third_party/grlib/scripts:gen_example_bazelrc)",
        "--vhd_preprocess=$(rootpath //third_party/grlib/scripts:vhd_preprocess)",
        "--python_bin=$(rootpath @python_3_12_host//:python)",
    ],
    data = [
        "maintain.sh",
        "//third_party/grlib/scripts:gen_build_files",
        "//third_party/grlib/scripts:gen_example_bazelrc",
        "//third_party/grlib/scripts:gen_master_kconfig",
        "//third_party/grlib/scripts:in2kconfig",
        "//third_party/grlib/scripts:maintain",
        "//third_party/grlib/scripts:vhd_preprocess",
        "@grlib_srcs//:grlib_srcs_all",
        "@python_3_12_host//:python",
        "//third_party/grlib:kconfig_all",
    ],
)

sh_test(
    name = "maintain_test",
    srcs = ["maintain_test.sh"],
    args = [
        "--maintain_bin=$(rootpath //third_party/grlib/scripts:maintain)",
        "--gen_build_files=$(rootpath //third_party/grlib/scripts:gen_build_files)",
        "--in2kconfig=$(rootpath //third_party/grlib/scripts:in2kconfig)",
        "--gen_master_kconfig=$(rootpath //third_party/grlib/scripts:gen_master_kconfig)",
        "--gen_example_bazelrc=$(rootpath //third_party/grlib/scripts:gen_example_bazelrc)",
        "--vhd_preprocess=$(rootpath //third_party/grlib/scripts:vhd_preprocess)",
        "--python_bin=$(rootpath @python_3_12_host//:python)",
    ],
    data = [
        "maintain.sh",
        "//third_party/grlib/scripts:gen_build_files",
        "//third_party/grlib/scripts:in2kconfig",
        "//third_party/grlib/scripts:gen_master_kconfig",
        "//third_party/grlib/scripts:gen_example_bazelrc",
        "//third_party/grlib/scripts:maintain",
        "//third_party/grlib/scripts:vhd_preprocess",
        "@grlib_srcs//:grlib_srcs_all",
        "//third_party/grlib:grlib.BUILD",
        "@python_3_12_host//:python",
        "//third_party/grlib:kconfig_all",
    ],
)
