load("@gazelle//:def.bzl", "gazelle")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "vhdl_standard",
    build_setting_default = "1993",
    values = [
        "1987",
        "1993",
        "2002",
        "2008",
        "2019",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "std_1987",
    flag_values = {":vhdl_standard": "1987"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "std_1993",
    flag_values = {":vhdl_standard": "1993"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "std_2002",
    flag_values = {":vhdl_standard": "2002"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "std_2008",
    flag_values = {":vhdl_standard": "2008"},
    visibility = ["//visibility:public"],
)

config_setting(
    name = "std_2019",
    flag_values = {":vhdl_standard": "2019"},
    visibility = ["//visibility:public"],
)

# Active design prefix configuration
string_flag(
    name = "ACTIVE_DESIGN_PREFIX",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

# Export Kconfig settings as aliases for external modules
alias(
    name = "CONFIG_NOELV_RV64",
    actual = "@grlib_config//:CONFIG_NOELV_RV64",
    visibility = ["//visibility:public"],
)

config_setting(
    name = "NOELV_RV64",
    flag_values = {
        ":CONFIG_NOELV_RV64": "y",
    },
    visibility = ["//visibility:public"],
)

# gazelle:prefix grlib
gazelle(name = "gazelle")

# Export standard GRLIB libraries (NVC specific)
alias(
    name = "grlib",
    actual = "//tool.nvc:grlib",
    visibility = ["//visibility:public"],
)

alias(
    name = "gaisler",
    actual = "//tool.nvc:gaisler",
    visibility = ["//visibility:public"],
)

alias(
    name = "techmap",
    actual = "//tool.nvc:techmap",
    visibility = ["//visibility:public"],
)

# Maintenance targets
sh_binary(
    name = "maintain",
    srcs = ["maintain.sh"],
    data = [
        "//third_party/grlib/scripts:maintain",
    ],
)

sh_test(
    name = "maintain_test",
    srcs = ["maintain_test.sh"],
    data = [":maintain"],
)
