module(
    name = "grlib_workspace",
    version = "1.0.0",
)

bazel_dep(name = "rules_nvc", version = "4.2.4")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.2")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "grlib",
    build_file = "//:grlib.BUILD",
    strip_prefix = "grlib-gpl-2025.2-b4298",
    urls = ["https://download.gaisler.com/products/GRLIB/bin/grlib-gpl-2025.2-b4298.tar.gz"],
)
