module(
    name = "grlib",
    version = "1.0.0",
)

bazel_dep(name = "rules_nvc", version = "4.2.6")

single_version_override(
    module_name = "nvc",
    patch_strip = 1,
    patches = [
        "//third_party/nvc:nvc_grlib.patch",
    ],
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_kconfig", version = "0.4.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12_host")

kconfig = use_extension("@rules_kconfig//kconfig:extensions.bzl", "kconfig")
kconfig.repo(
    name = "grlib_config",
    kconfig = "//:Kconfig",
    interpreter = "@python_3_12_host//:python",
)
use_repo(kconfig, "grlib_config")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "grlib_srcs",
    build_file = "//third_party/grlib:grlib.BUILD",
    strip_prefix = "grlib-gpl-2025.2-b4298",
    urls = ["https://download.gaisler.com/products/GRLIB/bin/grlib-gpl-2025.2-b4298.tar.gz"],
    integrity = "sha256-NCv//yj1TxVyXP77p+n6xc6/MNGJnlkPzVIWz6UiBkA=",
)
