module(
    name = "integration_test",
    version = "1.0.0",
)

bazel_dep(name = "grlib", version = "1.0.0")
local_path_override(
    module_name = "grlib",
    path = "..",
)

bazel_dep(name = "rules_nvc", version = "4.2.5")
local_path_override(
    module_name = "rules_nvc",
    path = "third_party/rules_nvc",
)

bazel_dep(name = "rules_shell", version = "0.8.0")

# Note: the `grlib` module already creates the `grlib_config` kconfig repository
# (via the rules_kconfig module extension) and re-exports its settings as public
# aliases such as `@grlib//:CONFIG_NOELV_RV64` and `@grlib//:ACTIVE_DESIGN_PREFIX`.
# Declaring our own `grlib_config` repo here would collide with grlib's, because
# the extension creates one repo per tag across all modules. Reference grlib's
# aliases instead of re-declaring the repository.
