module(
    name = "integration_test",
    version = "1.0.0",
)

bazel_dep(name = "grlib", version = "1.0.0")
local_path_override(
    module_name = "grlib",
    path = "..",
)

bazel_dep(name = "rules_nvc", version = "4.2.6")

single_version_override(
    module_name = "nvc",
    patch_strip = 1,
    patches = [
        "//third_party/nvc:nvc_grlib.patch",
    ],
)

bazel_dep(name = "rules_shell", version = "0.8.0")

# Expose @grlib_config so that --@grlib_config//:CONFIG_ACTIVE_DESIGN_PREFIX can
# be set from this workspace's .bazelrc (and by downstream users).  We do NOT
# create a new kconfig.repo tag — that would duplicate grlib's declaration.
# Instead we just import the repo that @grlib's extension already created.
bazel_dep(name = "rules_kconfig", version = "0.4.0")

kconfig = use_extension("@rules_kconfig//kconfig:extensions.bzl", "kconfig")
use_repo(kconfig, "grlib_config")
